added endpoint to API
